--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thesharks/tyr",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Lavalink implementation",
   "main": "index.js",
   "scripts": {
@@ -23,14 +23,15 @@
   "homepage": "https://github.com/TheSharks/Tyr#readme",
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^11.0.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1"
   },
   "dependencies": {
+    "eris": "^0.11.2",
     "superagent": "^5.2.2",
-    "ws": "^7.2.1"
+    "ws": "^7.2.3"
   }
 }
