--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Lavalink implementation",
   "main": "index.js",
   "scripts": {
-    "test": "eslint ."
+    "test": "eslint .",
+    "docs": "npx documentation build index.js -f html -o docs"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   },
   "homepage": "https://github.com/TheSharks/Tyr#readme",
   "devDependencies": {
+    "documentation": "^13.0.0",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.2",
