--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@thesharks/tyr",
-  "version": "1.1.3",
-  "description": "Lavalink implementation",
+  "version": "1.2.0",
+  "description": "Lightweight Lavalink implementation",
   "main": "index.js",
   "scripts": {
     "test": "eslint .",
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "eris": "*",
-    "superagent": "^6.1.0",
+    "node-fetch": "^2.6.1",
     "ws": "^7.3.1"
   }
 }
