--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thesharks/tyr",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Lightweight Lavalink implementation",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,9 @@
     "url": "https://github.com/TheSharks/Tyr/issues"
   },
   "homepage": "https://github.com/TheSharks/Tyr#readme",
+  "funding": {
+    "url": "https://github.com/sponsors/Dougley"
+  },
   "devDependencies": {
     "documentation": "^13.0.2",
     "eslint": "^7.11.0",
