--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "eslint .",
-    "docs": "npx documentation build index.js -f html -o docs"
+    "docs": "jsdoc --configure .jsdoc.json --verbose"
   },
   "repository": {
     "type": "git",
@@ -26,17 +26,18 @@
     "url": "https://github.com/sponsors/Dougley"
   },
   "devDependencies": {
-    "documentation": "^13.0.2",
-    "eslint": "^7.11.0",
-    "eslint-config-standard": "^14.1.1",
+    "eslint": "^7.16.0",
+    "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.1.0",
+    "jsdoc": "^3.6.6",
+    "jsdoc-fresh": "^1.0.5"
   },
   "dependencies": {
     "eris": "*",
     "node-fetch": "^2.6.1",
-    "ws": "^7.3.1"
+    "ws": "^7.4.1"
   }
 }
